--- a/css/app.css
+++ b/css/app.css
@@ -2,6 +2,9 @@ html,
 body {
     margin: auto;
     max-width: 1280px;
+    min-width: 321px;
+    padding-right: 5px;
+    padding-left: 5px;
 }
 
 h1,
@@ -12,12 +15,6 @@ h5,
 h6 {
     margin: 5px;
 }
-
-/*
-    font-family: "Work Sans", sans-serif;
-    font-family: "Montserrat", sans-serif;
-    font-family: "Roboto", sans-serif;
-*/
 
 .header {
     margin-left: 12%;
@@ -33,53 +30,49 @@ h6 {
 
 .logo {
     float: left;
+    filter: drop-shadow(3px 3px 5px #008cff);
+    padding-top: 0.7em;
 }
 
 .main {
     width: 100%;
     height: auto;
     display: flex;
-    flex: flex-wrap;
+    flex-wrap: wrap;
 }
 
 .sidebar {
     float: left;
-    width: 12%;
-    background: rgb(255, 255, 255);
-}
-
-.sidebar ul {
-    text-align: center;
-}
-
-.sidebar li {
-    list-style: none;
-    margin-bottom: 20px;
     font-family: "Montserrat", sans-serif;
-    font-weight: 100;
-    width: 100%;
     font-size: 14px;
+    width: 12%;
+    text-align: center;
     color: #858585;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
+}
+
+.color-wrapper {
+    width: 100%;
+    display: block;
+    margin-bottom: 50px;
 }
 
 .color-item {
     width: 50%;
     height: 50px;
-    margin: auto;
+    margin-left: auto;
+    margin-right: auto;
+    cursor: pointer;
 }
 
-.c-1 {
+#color-1 {
     background: #02b3e4;
 }
 
-.c-2 {
+#color-2 {
     background: #2d3c49;
 }
 
-.c-3 {
+#color-3 {
     background: #7d97ad;
 }
 
@@ -108,11 +101,13 @@ h6 {
     margin-top: 30px;
     text-align: justify;
 }
+
 .featured-work:after {
-	content: "";
-	width: 100%;
-	display: inline-block;
-    }
+    content: "";
+    width: 100%;
+    display: inline-block;
+}
+
 .site-item {
     height: 270px;
     width: 30%;
@@ -122,33 +117,30 @@ h6 {
 }
 
 .site-item img {
-    box-shadow: 3px 3px 3px rgb(185, 185, 185);
+    box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.5);
     border: 1px solid #777;
     height: 80%;
     width: 100%;
     object-fit: fill;
-    margin:auto;
+}
+
+.site-item h2,
+h6 {
+    color: #000;
+    font-weight: 100;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    padding-right: 5px;
 }
 
 .site-item h2 {
-    display: inline-block;
-    color: #000;
-    font-family: "BenchNine", sans-serif;
-    font-weight: 100;
     font-size: 25px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
 }
 
 .site-item a {
-    text-decoration: none;
-    font-weight: 100;
     color: #000;
-    font-size: 14px;
-    text-overflow: ellipsis;
-    overflow: hidden;
-    white-space: nowrap;
+    text-decoration: none;
 }
 
 .site-item a:hover {
@@ -156,18 +148,78 @@ h6 {
 }
 
 footer {
-    background-color: rgb(220, 221, 221);
+    color: rgb(128, 128, 128);
     width: 88%;
     height: 30px;
     text-align: center;
     font-family: "Roboto", sans-serif;
+    font-size: 0.9em;
     margin-left: 12%;
-    margin-top:30px;
+    margin-top: 30px;
+    padding-top: 0.25em;
 }
-footer a {
-    text-decoration: none;
-    color: #00f;
+
+@media screen and (min-width: 160px)and (max-width: 480px) {
+    .sidebar {
+        width: 100%;
+        height: 60px;
+        text-align: justify;
+    }
+    .color-wrapper {
+        width: 32%;
+        height: 100%;
+        display: inline-block;
+        text-align: center;
+        margin-top: 0.5em;
+    }
+    .color-item {
+        height: 40px;
+    }
+    .header,
+    .content,
+    footer {
+        margin-left: 0;
+        width: 100%;
+    }
+    .header {
+        font-size: 60%;
+    }
+    .logo {
+        width: 40px;
+    }
+    .site-item {
+        width: 100%;
+        height: auto;
+        padding-bottom: 30px;
+    }
 }
-footer a:hover {
-    color: #f00;
+
+@media screen and (min-width: 481px)and (max-width: 768px) {
+    .sidebar {
+        width: 100%;
+        height: 75px;
+        text-align: justify;
+    }
+    .color-wrapper {
+        width: 32%;
+        display: inline-block;
+        text-align: center;
+        margin-top: 1em;
+    }
+    .site-item img {
+        height: 120px;
+    }
+    .site-item h2,
+    h6 {
+        font-size: 70%
+    }
+    .header,
+    .content,
+    footer {
+        margin-left: 0;
+        width: 100%
+    }
+    .logo {
+        width: 60px;
+    }
 }
