--- a/css/app.css
+++ b/css/app.css
@@ -90,7 +90,7 @@ h6 {
 .main-content img{
     height: 100%; 
     width: 100%; 
-    object-fit: cover
+    object-fit: cover;
 }
 .main-content h6 {
     text-align: right;
@@ -188,9 +188,6 @@ footer {
         width: 100%;
         font-size: 60%;
     }
-    .header {
-        font-size: 60%;
-    }
     .logo {
         width: 40px;
     }
@@ -219,9 +216,12 @@ footer {
         text-align: center;
         margin-top: 1em;
     }
-    .site-item img {
-        height: 120px;
+    .site-item {
+        width: 48%;
+        height: 50%;
+        padding-bottom: 30px;
     }
+
     .site-item h2, h6 {
         font-size: 75%;
     }
@@ -237,5 +237,12 @@ footer {
     }
     .logo {
         width: 60px;
+    }
+}
+@media screen and (min-width: 769px){
+    .site-item {
+        width: 24%;
+        height: auto;
+        padding-bottom: 30px;
     }
 }
